# trame-widget-tester

./: CONTRIBUTING.rst  README.rst  setup.cfg
bundles/desktop/macOS/: setup.py
bundles/desktop/windows/: README.md  create_exe.bat  run.py
bundles/docker/: README.md
bundles/docker/scripts/: build_image.sh  run_image.sh
bundles/docker/setup/: apps.yml  requirements.txt
examples/jupyter/: show.ipynb
tests/: test_import.py
trame_widget_tester/app/: default_states.py  engine.py  filebrowser_functions.py  jupyter.py  ui.py  vtk_pipeline.py
trame_widget_tester/default_widget/: engine.py  ui.py
